select 第一版形成

--- a/select.html
+++ b/select.html
@@ -6,6 +6,11 @@
 		<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
 		<script type="text/javascript" src="js/jquery.select.js"></script>
 	</head>
+	<style>
+		.mt {
+			overflow: auto;
+		}
+	</style>
 	<script>
 		$(document).ready(function (){
 			$('#txt1').multipleSelect();
@@ -24,11 +29,7 @@
 			$('#txt2').multipleSelect();
 		});
 	</script>
-	<style>
-		#txt1 {
-			
-		}
-	</style>
+	
 	<body>
 		<div style="margin: 20px auto; width: 200px; height: 200px; background: red;">
 			<input id="txt1" type="text" />
