修改了一个小bug 不兼容ie7及以下

--- a/select.html
+++ b/select.html
@@ -12,6 +12,7 @@
 			overflow: auto;
 			overflow-x: hidden;
 			background: white;
+			
 			border: 1px;
 			border-color: black;
 		}
@@ -59,6 +60,7 @@
 				<li><input type="checkbox" /><label>韩国</label></li>
 				<li><input type="checkbox" /><label>土耳其</label></li>
 			<input type="text" id="txt2" />
+			修改 但不提交
 		</div>
 	</body>
 </html>
